force-app/main/default/objects/nd_jv_entry__c/fields/clearing_account__c.field-meta.xml
<CustomField>
    <fullName>clearing_account__c</fullName>
    <label>clearing account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>