force-app/main/default/objects/nd_jv_entry__c/fields/clearing_amount__c.field-meta.xml
<CustomField>
    <fullName>clearing_amount__c</fullName>
    <label>clearing_amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>