force-app/main/default/objects/nd_jv_entry__c/fields/designation_account__c.field-meta.xml
<CustomField>
    <fullName>designation_account__c</fullName>
    <label>designation_account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>