force-app/main/default/objects/nd_jv_entry__c/fields/designation_amount__c.field-meta.xml
<CustomField>
    <fullName>designation_amount__c</fullName>
    <label>designation amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>