force-app/main/default/objects/nd_jv_entry__c/fields/jv_entry__c.field-meta.xml
<CustomField>
    <fullName>jv_entry__c</fullName>
    <label>JV Entry</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>