force-app/main/default/objects/nd_jv_entry__c/fields/jv_type__c.field-meta.xml
<CustomField>
    <fullName>jv_type__c</fullName>
    <label>jv type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DV1</fullName>
            </value>
            <value>
                <fullName>DV2</fullName>
            </value>
            <value>
                <fullName>DV3</fullName>
            </value>
            <value>
                <fullName>DV4</fullName>
            </value>
            <value>
                <fullName>DV5</fullName>
            </value>
            <value>
                <fullName>DV6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>