force-app/main/default/objects/nd_jv_entry__c/fields/opportunity_id__c.field-meta.xml
<CustomField>
    <fullName>opportunity_id__c</fullName>
    <description>id of the opportunity that was used to create the entry in the table</description>
    <label>opportunity id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>