force-app/main/default/objects/nd_jv_entry__c/fields/opportunity_name__c.field-meta.xml
<CustomField>
    <fullName>opportunity_name__c</fullName>
    <label>gift/pledge</label>
    <length>20</length>
    <type>Text</type>
</CustomField>