force-app/main/default/objects/nd_jv_entry__c/fields/tender_type__c.field-meta.xml
<CustomField>
    <fullName>tender_type__c</fullName>
    <label>tender_type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>